css/styles.css
body {
  text-align: center;
  font-family: "Roboto", monospace;
}

h1 {
  margin: 0 auto;
  font-family: "Major Mono Display", monospace;
  font-size: 48px;
  margin: 2%;
}

h2 {
  font-size: 36px;
  font-weight: lighter;
  margin: 2%;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.column {
  height: 100%;
  width: 100%;
  flex-direction: column;
}

.wrap {
  flex-wrap: wrap;
  height: 456px;
  width: 456px;
}

.square {
  border: 1px solid rgba(0, 0, 0, 0.75);
  font-size: 96px;
  height: 150px;
  line-height: 150px;
  user-select: none;
  width: 150px;
}

.square:hover {
  background-color: mediumslateblue;
  cursor: pointer;
}

#reset-button {
  background-color: white;
  border: 1px solid black;
  color: black;
  font-size: 21px;
  line-height: 55px;
  margin: 1%;
  text-align: center;
  width: 456px;
}

#reset-button:hover {
  background-color: mediumslateblue;
  color: white;
  cursor: pointer;
}

#xfirst_bttn {
border: 3px solid violet;
background-color: white;
border-radius: 25px;
width: 100px;
height: 50px;
font-size: 20px;
}

#ofirst_bttn {
  border: 3px solid dodgerblue;
  background-color: white;
  border-radius: 25px;
  width: 100px;
  height: 50px;
  font-size: 20px;
}

#style-me {
  font-size: 30px;
}

#center-me {
  text-align: center;
}

#x-score {
  text-align: center;
}

